# reboot-notifier

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.in  requirements.txt  run.py
.github/workflows/: linter.yml  publish.yml
reboot_notifier/: __init__.py  __main__.py  config.py  main.py  networking.py  notify.py
